<resources>
    <string name="app_name">Bar Crawl</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="settings">Settings</string>
    <string name="find_bar">Add Bar/Restaurant</string>
    <string name="map_type">Change Map Type</string>
    <string name="login_text">Login</string>
    <string name="button_login">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="create_a_crawl">Create a crawl</string>
    <string name="load_a_crawl">Load a crawl</string>
    <string name="remove">Remove</string>
    <string name="select_this_crawl">Select this Crawl</string>

    <!-- Facebook stuff -->
    <string name="facebook_app_id">570415306452657</string>
    <string name="action_show_access_token_title">Print Access Token</string>
    <string name="title_activity_access_token">AccessTokenActivity</string>
    <string name="title_activity_show_access_token">ShowAccessTokenActivity</string>
    <string name="profile_pic">Facebook Profile Picture</string>
    <string name="register_an_account">Register an Account</string>
    <string name="register">Register</string>
    <string name="don_apos_t_have_an_account">Don\'t have an account?</string>
    <string name="crawl_name">Crawl Name</string>
    <string name="crawl_date">Crawl Date</string>
    <string name="continue_button">Continue</string>
    <string name="bar_crawl">Bar Crawl</string>
    <string name="select_date">Select Date</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
</resources>
