<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/beer"
    tools:context="com.example.crawlapp.barcrawl.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_an_account"
        android:id="@+id/registerTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_username"
        android:id="@+id/textViewUsername"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editTextUsername"
        android:layout_alignBottom="@+id/editTextUsername"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_password"
        android:id="@+id/textViewPassword"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm_password"
        android:id="@+id/textViewConfirmPassword"
        android:layout_alignBaseline="@+id/editTextConfirmPassword"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editTextConfirmPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/editTextUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editTextUsername"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="68dp"
        android:layout_toEndOf="@+id/textViewUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editTextConfirmPassword"
        android:layout_marginBottom="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewConfirmPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:onClick="registerAccount"/>
</RelativeLayout>
