<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/beer"
    tools:context=".NewCrawlActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_a_crawl"
        android:id="@+id/createCrawlTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crawl_name"
        android:id="@+id/textViewCrawlName"
        android:textSize="18dp"
        android:layout_above="@+id/datePicker"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="103dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:text="Select Date"
        android:background="@drawable/button"
        android:layout_above="@+id/continueButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="114dp"
        android:onClick="showDatePicker"
        android:layout_alignEnd="@+id/continueButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editTextCrawlName"
        android:layout_alignBottom="@+id/textViewCrawlName"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewCrawlName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:id="@+id/continueButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:onClick="continueOn"/>

</RelativeLayout>
